test_files/bad/bad_definition_5.ru
def A "ABC" "C"

if A or "C" then D